correcting white space  between divs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,195 @@
-/* Reset */
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0-modified | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+/* make sure to set some focus styles for accessibility */
+:focus {
+    outline: 0;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+body {
+	line-height: 1;
+}
+
+ol, ul {
+	list-style: none;
+}
+
+blockquote, q {
+	quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+input[type=search]::-webkit-search-cancel-button,
+input[type=search]::-webkit-search-decoration,
+input[type=search]::-webkit-search-results-button,
+input[type=search]::-webkit-search-results-decoration {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+input[type=search] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
+
+textarea {
+    overflow: auto;
+    vertical-align: top;
+    resize: vertical;
+}
+
+/**
+ * Correct `inline-block` display not defined in IE 6/7/8/9 and Firefox 3.
+ */
+
+audio,
+canvas,
+video {
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    max-width: 100%;
+}
+
+/**
+ * Prevent modern browsers from displaying `audio` without controls.
+ * Remove excess height in iOS 5 devices.
+ */
+
+audio:not([controls]) {
+    display: none;
+    height: 0;
+}
+
+/**
+ * Address styling not present in IE 7/8/9, Firefox 3, and Safari 4.
+ * Known issue: no IE 6 support.
+ */
+
+[hidden] {
+    display: none;
+}
+
+/**
+ * 1. Correct text resizing oddly in IE 6/7 when body `font-size` is set using
+ *    `em` units.
+ * 2. Prevent iOS text size adjust after orientation change, without disabling
+ *    user zoom.
+ */
+
+html {
+    font-size: 100%; /* 1 */
+    -webkit-text-size-adjust: 100%; /* 2 */
+    -ms-text-size-adjust: 100%; /* 2 */
+}
+
+/**
+ * Address `outline` inconsistency between Chrome and other browsers.
+ */
+
+a:focus {
+    outline: thin dotted;
+}
+
+/**
+ * Improve readability when focused and also mouse hovered in all browsers.
+ */
+
+a:active,
+a:hover {
+    outline: 0;
+}
+
+/**
+ * 1. Remove border when inside `a` element in IE 6/7/8/9 and Firefox 3.
+ * 2. Improve image quality when scaled in IE 7.
+ */
+
+img {
+    border: 0; /* 1 */
+    -ms-interpolation-mode: bicubic; /* 2 */
+}
+
+/**
+ * Address margin not present in IE 6/7/8/9, Safari 5, and Opera 11.
+ */
+
+figure {
+    margin: 0;
+}
+
+/**
+ * Correct margin displayed oddly in IE 6/7.
+ */
+
+form {
+    margin: 0;
+}
+
+/**
+ * Define consistent border, margin, and padding.
+ */
+
+fieldset {
+    border: 1px solid #c0c0c0;
+    margin: 0 2px;
+    padding: 0.35em 0.625em 0.75em;
+}
+
+/**
+ * 1. Correct color not being inherited in IE 6/7/8/9.
+ * 2. Correct text not wrapping in Firefox 3.
+ * 3. Correct alignment displayed oddly in IE 6/7.
+ */
+
+legend {
+    border: 0; /* 1 */
+    padding: 0;
+    white-space: normal; /* 2 */
+    *margin-left: -7px; /* 3 */
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -48,21 +239,29 @@ table {
 	border-spacing: 0;
 }
 
-
-
-
 /* End of Reset----------------------------------------------------------------------------------------*/
 
-.headerSection{
-    border-bottom: 5px solid #cccccc
+
+.headerSection,
+.mainSection,
+.footerSection{
+    width: 100%;
     
+}
+
+
+.headerSection{
+    /*border: 2px solid red;*/
+    /*border-bottom: 5px solid #cccccc;*/
+    border-bottom:0;
     
 }
 
 #logo{
+   
     /*border: 2px solid palevioletred;*/
     width: 20%;
-    padding-top:  50px;
+    padding-top:  50px; 
     padding-bottom: 50px;
     margin-left: 240px;
     display: inline-block;
@@ -74,7 +273,7 @@ table {
 }
 
 #nav{
-   /* border: 2px solid palevioletred;*/
+  /* border: 2px solid palevioletred;*/
     width: 44%; 
     margin-left: 30px;
     display: inline-block;
@@ -84,16 +283,18 @@ table {
 }
 
 .mainSection{
+     /*border: 2px solid green;*/
     background-image: url("/Users/ml/Desktop/Bootcamp/homework/Basic-Portfolio/assets/images/extraClean.png");
-    /*border: 2px solid green;*/
-    height: 50%;
+    border-top: 5px solid #cccccc;
+    border-bottom: 5px solid #4aaaa5;
+    /*height: 50%;*/
 }
 
 #main{
+    /*border: 1px solid  blue;*/
     width: 960px;
-   /* border: 1px solid  blue;*/
     margin: 0 auto 0 auto;
-    padding: 60px;
+    padding: 20px;
 }
 
 #sectionName{
@@ -146,20 +347,25 @@ p{
 #text2{
     clear: both;
     overflow: auto;
-    padding: 0 36px 20px 44px;
+    padding: 0 30px 20px 44px;
     
     
 }
 
 .footerSection{
+    /*border: 2px solid red;*/
     background-color: #666666;
-    border-top: 5px solid #4aaaa5;
+    /*border-top: 5px solid #4aaaa5;*/
     color: white;
     text-align: center;
-    padding: 17px;
+    padding: 20px;
     
 }
-
+footer{
+    background-color: #666666;
+    color: white;
+    text-align: center;
+}
 
 /* specific to contact.html----------------------------------------------------------------------------------------*/
 
@@ -193,7 +399,7 @@ label {
     display: inline-block;
     font-size: 16px;
     color: #cccccc;
-    margin-top: 5px;
+    margin-top: 5px; 
     margin-bottom: 5px;
     font-size: 16px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -207,14 +413,18 @@ textarea{
 }
 
 div{
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 5px; 
+    margin-bottom: 5px; 
 }
 
 #submit{
-    padding: 15px;
-    margin: 30px;
-    background-color: aquamarine;
+    display: inline-block;
+    padding: 15px 28px 15px 28px;
+    margin-left: 70px;
+    margin-bottom: 20px;
+    background-color: #4aaaa5;
+    text-align: center;
     color: white;
+    font-size: 19px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
